# NDK_Kernel_Module

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  module.lds
examples/: loader_full.c
fixup_ko/: CMakeLists.txt  README.md
fixup_ko/src/: fixup_ko.c
include/: README.md  kmod_hook.h  kmod_kcfi.h  kmod_kernel.h  kmod_module.h  kmod_string.h  kmod_types.h  kmod_uaccess.h
kpmctl/: CMakeLists.txt
kpmctl/src/: kpmctl.c
loader/: CMakeLists.txt  cfi_bypass.c  kp_compat.c  kpm_elf.c  kpm_internal.h  kpm_syscall.c  loader.c  seccomp_bypass.c
src/: cfi_entry_stubs.S  kmod_hook.c  kmod_kernel.c  kmod_uaccess.c
